--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,35 +29,37 @@ section{
     font-weight: 650;
 }
 /* Buttons styles */
-.my-blank_button{
+.my-dark_button{
     margin-top: 20px !important;
     margin: 15px 0;
     padding: 5px 14px;
     text-decoration: none;
     color: var(--background-color);
-    border: 1px solid var(--background-color);
-    /* border-radius: 50px; */
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 50px;
     font-weight: 500;
 }
-.my-blank_button:hover {
+.my-dark_button:hover {
     color: var(--primary-color) !important;
     background-color: var(--background-color);
+    border: 1px solid var(--primary-color);
     transition: 1s;
 }
 
-.my-fill_button{
+.my-light_button{
     margin-top: 20px !important;
     text-decoration: none;
     margin: 15px 0;
     padding: 5px 14px;
     background-color: var(--background-color);
-    /* border: 1px solid var(--background-color); */
-    color: var(--primary-color);
-    /* border-radius: 50px; */
+    border: 1px solid var(--background-color);
+    color: var(--primary-color) !important;
     font-weight: 500;
+    border-radius: 50px;
 }
-.my-fill_button:hover {
-    color: var(--background-color);
+.my-light_button:hover {
+    color: var(--background-color) !important;
     border: 1px solid var(--background-color);
     background:none;
     transition: 1s;
@@ -116,86 +118,44 @@ header section{
     color: var(--background-color);
     margin: 5px;
 }
-
-/* Projects Area */
-/* .portfolio-menu{
-    text-align: center;
+/* Modal styling */
+.modal-content {
+    background-color: var(--background-color) !important;
+}
+.modal-header {
+    border-bottom: none;
     margin-top: 20px;
-}
-.portfolio-menu ul li{
-    display: inline-block;
-    margin: 10px 10px;
-    list-style: none;
-    padding: 5px 25px;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--background-color);
-    background-color: var(--primary-color);
-    border: 2px solid var(--primary-color);
-    cursor: pointer;
-    -webkit-transition: all 0.5 ease;
-    -moz-transition: all 0.5 ease;
-    -ms-transition: all 0.5 ease;
-    -o-transition: all 0.5 ease;
-    transition: all 0.5 ease;
-}
-.portfolio-menu ul li:hover{
-    background: var(--background-color);
     color: var(--primary-color);
 }
-.portfolio-item{
-    width: 100%;
-}
-.portfolio-item .item{
-    width: 200px;
-    float: left;
-    margin: 10px;
-}
-li.active{
-    background: var(--background-color) !important;
-    color: var(--primary-color) !important;
+
+.modal-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 
+.modal-body p {
+    font-size: 1rem;
+    margin-top: 10px;
+    color: var(--primary-color);
+}
 
-.project-single{
-    position: relative;
-    margin: 20px 0;
-    padding: 5px 0;
-}
-.project-title-img {
-    
-}
-.project-title{
+.btn-close {
     position: absolute;
-    height: 60px;
-    width: calc(100% - 30px);
-    margin: -30px 15px 30px 15px;
-    padding: 15px !important;
+    top: 10px;
+    right: 10px;
+}
+.modal-footer {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    background-color: var(--background-color);
-    box-shadow: 0 0 15px rgba(0, 0, 0, .12);
-    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px; /* To add some space between elements if needed */
+    padding: 15px;
 }
-.project-title a{
-    display: flex; 
-    text-decoration: none;
-    background-color: var(--primary-color);
-    color: var(--background-color);
-    font-weight: 500;
-}
-.project-title-text{
-    display: flex; 
-}
-.project-title-button{
-    display: flex; 
-}
-.project-title a:hover {
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    background:none;
-    transition: 1s;
-} */
-
 /* Projects Section CSS */
 .singleProject {
     background-color: var(--primary-color) !important;
