--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,7 +104,8 @@ header section{
     margin-top: 25px;
 }
 .hero-profile .hero-info h1{
-    letter-spacing: -2px;
+    letter-spacing: 1px;
+    font-size: 2rem;
     font-weight: 700;
 }
 .hero-profile .hero-info .hero-paragraph{
@@ -199,26 +200,46 @@ header section{
     height: 100%;
 }
 
-@media (max-width: 992px) {
-    .projectSingle-body {
-        justify-content: space-between;
-    }
-}
-
-@media (max-width: 768px) {
-    .projectSingle-body {
-        flex-direction: column;
-        align-items: center;
-    }
-}
 /* Drop Message Area */
 .dropMessage{
     padding: 50px 0 !important;
     background-color: var(--primary-color);
     color: #FFFFFF;
 }
-/* My Profile Section - Custom */
-
+/* My Online Judge Profile Section */
+.oj_profile_single {
+    padding: 10px;
+}
+.oj_profile_single:hover{
+    .oj_profile_card{
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+                    rgba(0, 0, 0, 0.05) 1px 4px 6px -2px;
+    }
+}
+.oj_profile_card {
+    padding: 50px 25px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, 
+                rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+.oj_logo {
+    height: 120px;
+    padding: 25px;
+}
+.oj_logo img{
+    height: 60px;
+}
+.oj_profile_single_info p{
+    margin: auto 35px;
+    font-weight: 500;
+    font-size: .95rem;
+}
+.oj_profile_single_link {
+    margin-top: 10px;
+}
+.oj_profile_single_link a{
+    margin-top: 10px !important;
+    color: black !important;
+}
 /* Blog Section CSS */
 .singleArticle {
     background-color: var(--primary-color) !important;
@@ -252,13 +273,7 @@ footer .footer-body .footer-text h3 {
 }
 footer .footer-body .footer-icons a {
     font-size: 1.2rem;
-    /* margin: .2rem; */
-    /* padding: .2rem; */
     color: var(--second-color);
-    /* background-color: var(--primary-color); */
-    /* border: 1px solid var(--primary-color); */
-    /* border-radius: 50%;  */
-
 }
 footer .footer-body .footer-icons a:hover {
     color: var(--primary-color);
