update oj profiles section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,6 +244,7 @@ header section{
     margin-right: 25px;
 }
 .oj_profile_single_link a{
+    font-size: .85rem;
     color: var(--primary-color);
     text-decoration: underline !important;
 }
