--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -158,6 +158,7 @@ header .offcanvas {
     color: var(--background-color);
     border: none !important;
     box-shadow: 15px 15px 0px -10px rgba(27, 27, 50, 0.30);
+    height: 100%;
 }
 
 .singleProject img, .singleArticle img {
@@ -167,13 +168,8 @@ header .offcanvas {
 }
 
 .singleProject-body, .singleArticle-body {
-    padding: 25px !important;
-}
-
-.projectSingle-body {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    padding: 15px !important;
+    height: 100%;
 }
 
 .myProjects .myProjects-body .singleProject-body a {
@@ -230,6 +226,11 @@ header .offcanvas {
 
 .oj_profile_single_link a:hover {
     color: var(--primary-color);
+}
+
+/* Articles */
+.singleArticle img {
+    min-height: 400px !important;
 }
 
 /* Footer */
